Fix radar layout

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,3 +14,8 @@ table .tag {
 .assess-bg {
     background: #6CBFAF !important;
 }
+
+th, td {
+    text-align: center !important;
+    border: none !important;
+}
