--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,7 +13,15 @@ h3 {
   font-size: 1.6rem;
 }
 
-h2, h3 {
+h4 {
+  font-size: 1.45rem;
+}
+
+h5 {
+  font-size: 1.3rem;
+}
+
+h1, h2, h3, h4, h5 {
   font-weight: bold;
 }
 
