--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,7 +6,6 @@ h2 {
   font-size: 2rem;
   font-weight: 600;
   margin: 0 0 10px;
-  color: map.get($colors, "darkBlue");
 }
 
 h3 {
@@ -23,6 +22,11 @@ h5 {
 
 h1, h2, h3, h4, h5 {
   font-weight: bold;
+  color: map.get($colors, "darkBlue");
+}
+
+p {
+  margin-bottom: 20px;
 }
 
 a {
