Hide previews on mobile and tablet

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -42,6 +42,18 @@ a {
   }
 }
 
+a {
+  h1, h2, h3, h4, h5 {
+    color: map.get($colors, "link");
+  }
+}
+
+a:hover {
+  h1, h2, h3, h4, h5 {
+    color: map.get($colors, "pink");
+  }
+}
+
 section:nth-child(even) {
   background-color: #f0f5f7;
 }
