--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 @use 'sass:map';
 @import '~bulma/css/bulma.css';
 @import '~@fortawesome/fontawesome-free/css/all.css';
+@import "~chartist/dist/scss/chartist.scss";
 
 h1 {
   font-size: 2rem;
