Use light background for level tags

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -98,18 +98,18 @@ ol {
   margin-left: 1.5rem;
 }
 
-.adopt-background {
+body .adopt-background {
   background-color: map.get($colors, 'adoptBg');
 }
 
-.trial-background {
+body .trial-background {
   background-color: map.get($colors, 'trialBg');
 }
 
-.assess-background {
+body .assess-background {
   background-color: map.get($colors, 'assessBg');
 }
 
-.hold-background {
+body .hold-background {
   background-color: map.get($colors, 'holdBg');
 }
