Update styles to match CNCF guidelines

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,31 +4,30 @@
 @import "~chartist/dist/scss/chartist.scss";
 
 h1 {
-  font-size: 2rem;
+  font-size: 42px;
   margin: 0 0 10px;
 }
 
 h2 {
-  font-size: 1.8rem;
-  font-weight: 600;
+  font-size: 34px;
   margin: 0 0 10px;
 }
 
 h3 {
-  font-size: 1.6rem;
+  font-size: 28px;
 }
 
 h4 {
-  font-size: 1.45rem;
+  font-size: 20px;
 }
 
 h5 {
-  font-size: 1.3rem;
+  font-size: 16px;
 }
 
 h1, h2, h3, h4, h5 {
   font-weight: bold;
-  color: map.get($colors, "blueTitle");
+  color: map.get($colors, "darkPurple");
 }
 
 p, dl {
@@ -51,22 +50,17 @@ a {
 }
 
 body {
-  font-size: 1.125rem;
-  color: #202020;
+  font-size: 16px;
+  color: map.get($colors, "darkPurple");
 }
 
 section:nth-of-type(even),
 section.blue-background {
-  background-color: #f0f5f7;
+  background-color: map.get($colors, "lightGray");
 }
 
 section.white-background {
   background-color: white;
-}
-
-body {
-  font-size: 1.125rem;
-  color: #202020;
 }
 
 // Sticky footer
@@ -120,4 +114,8 @@ body .assess-background {
 
 body .hold-background {
   background-color: map.get($colors, 'holdBg');
+}
+
+.table {
+  color: map.get($colors, 'darkPurple');
 }
