--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,31 +4,31 @@
 @import "~chartist/dist/scss/chartist.scss";
 
 h1 {
-  font-size: 2rem;
+  font-size: 42px;
   margin: 0 0 10px;
 }
 
 h2 {
-  font-size: 1.8rem;
-  font-weight: 600;
+  font-size: 34px;
   margin: 0 0 10px;
 }
 
 h3 {
-  font-size: 1.6rem;
+  font-size: 28px;
 }
 
 h4 {
-  font-size: 1.45rem;
+  font-size: 20px;
 }
 
 h5 {
-  font-size: 1.3rem;
+  font-size: 16px;
 }
 
 h1, h2, h3, h4, h5 {
+  line-height: 1.125;
   font-weight: bold;
-  color: map.get($colors, "blueTitle");
+  color: map.get($colors, "darkPurple");
 }
 
 p, dl {
@@ -51,22 +51,17 @@ a {
 }
 
 body {
-  font-size: 1.125rem;
-  color: #202020;
+  font-size: 16px;
+  color: map.get($colors, "darkPurple");
 }
 
 section:nth-of-type(even),
 section.blue-background {
-  background-color: #f0f5f7;
+  background-color: map.get($colors, "lightGray");
 }
 
 section.white-background {
   background-color: white;
-}
-
-body {
-  font-size: 1.125rem;
-  color: #202020;
 }
 
 // Sticky footer
@@ -84,12 +79,6 @@ main {
 @media only screen and (min-width: 1250px) {
   nav .container {
     max-width: 1200px;
-  }
-}
-
-@media only screen and (min-width: 1250px) {
-  main section .container {
-    max-width: 1050px;
   }
 }
 
@@ -120,4 +109,8 @@ body .assess-background {
 
 body .hold-background {
   background-color: map.get($colors, 'holdBg');
+}
+
+.table {
+  color: map.get($colors, 'darkPurple');
 }
