(styles): Enable multiple background styles to be generated
Since level names can now be changed, this adapts the styles to
permit multiple $foo-background styles to be generated so that
we can render all the bars properly.

Signed-off-by: Daniel Silverstone <daniel.silverstone@codethink.co.uk>

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -95,20 +95,10 @@ ol {
   margin-left: 1.5rem;
 }
 
-body .adopt-background {
-  background-color: map.get($colors, 'adoptBg');
-}
-
-body .trial-background {
-  background-color: map.get($colors, 'trialBg');
-}
-
-body .assess-background {
-  background-color: map.get($colors, 'assessBg');
-}
-
-body .hold-background {
-  background-color: map.get($colors, 'holdBg');
+@each $background, $color in $backgrounds {
+  body .#{$background}-background {
+    background-color: map.get($colors, $color);
+  }
 }
 
 .table {
